[UI] Fixed the alignment of contents in website

--- a/docs/_sass/base/_page.scss
+++ b/docs/_sass/base/_page.scss
@@ -70,6 +70,9 @@ a {
 }
 
 @media(max-width:480px){
+  .container{
+    padding-left: 1.7rem;
+  }
   .page-section {
     // padding-left: 1em;
     // padding-right: 1em;
